corrected infoBubble bug after closing modal; header on mobile needs work

--- a/app/Modals/ModalsInfoButton/ModalInfoButton.scss
+++ b/app/Modals/ModalsInfoButton/ModalInfoButton.scss
@@ -30,6 +30,7 @@
     border-radius: 3px;
     font-size: 12px;
     animation: openBubble 0.4s ease-in-out;
+    opacity: 1;
     
     &.-smallView {
         display: block;
@@ -38,6 +39,7 @@
         max-width: 100%;
         width: -webkit-fill-available;
         margin: 4px;
+        opacity: 1;
 
         &.-modalOpen {
             opacity: 0;
